--- a/tournaments/tournaments-de.po
+++ b/tournaments/tournaments-de.po
@@ -55,3 +55,11 @@ msgstr "Dateipfad für die Rating-Datei %s ist falsch: %s/%s."
 #: zzbrick_make/ratings-import-dwz.inc.php
 msgid "File not found for rating import: %s"
 msgstr "Datei %s für den Rating-Import nicht gefunden."
+
+#: zzbrick_request/livegames.inc.php
+msgid ""
+"The tournament is over. All live games are integrated into the <a href="../">tournament "
+"pages</a>."
+msgstr ""
+"Das Turnier ist vorbei. Alle Live-Partien wurden in die <a href="../">Turnierseiten</a> "
+"integriert."
