teaminternal: return 403 if no tournament has been created yet

--- a/tournaments/tournaments.pot
+++ b/tournaments/tournaments.pot
@@ -5,7 +5,7 @@
 # https://www.zugzwang.org/modules/tournaments
 #
 # @author Gustaf Mossakowski <gustaf@koenige.org>
-# @copyright Copyright © 2020-2022 Gustaf Mossakowski
+# @copyright Copyright © 2020-2023 Gustaf Mossakowski
 # @license http://opensource.org/licenses/lgpl-3.0.html LGPL-3.0
 #
 msgid ""
@@ -28,4 +28,8 @@ msgstr ""
 
 #: zzbrick_request/livegames.inc.php
 msgid "The tournament is over. All live games are integrated into the <a href="../">tournament pages</a>."
+msgstr ""
+
+#: zzbrick_request/teaminternal.inc.php
+msgid "Please create a tournament first."
 msgstr ""
