--- a/tournaments/tournaments-de.po
+++ b/tournaments/tournaments-de.po
@@ -5,7 +5,7 @@
 # https://www.zugzwang.org/modules/tournaments
 #
 # @author Gustaf Mossakowski <gustaf@koenige.org>
-# @copyright Copyright © 2020-2022 Gustaf Mossakowski
+# @copyright Copyright © 2020-2023 Gustaf Mossakowski
 # @license http://opensource.org/licenses/lgpl-3.0.html LGPL-3.0
 #
 msgid ""
@@ -33,3 +33,7 @@ msgid ""
 msgstr ""
 "Das Turnier ist vorbei. Alle Live-Partien wurden in die <a href=\"../"
 "\">Turnierseiten</a> integriert."
+
+#: zzbrick_request/teaminternal.inc.php
+msgid "Please create a tournament first."
+msgstr "Bitte legen Sie zuerst ein Turnier an."
