--- a/tournaments/tournaments-de.po
+++ b/tournaments/tournaments-de.po
@@ -5,7 +5,7 @@
 # https://www.zugzwang.org/modules/tournaments
 #
 # @author Gustaf Mossakowski <gustaf@koenige.org>
-# @copyright Copyright © 2020-2023 Gustaf Mossakowski
+# @copyright Copyright © 2020-2022 Gustaf Mossakowski
 # @license http://opensource.org/licenses/lgpl-3.0.html LGPL-3.0
 #
 msgid ""
@@ -21,6 +21,26 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Poedit 1.8.12\n"
+
+#: zzbrick_forms/tournaments.inc.php
+msgid ""
+"Instead of input: Transfer of the settings from the last tournament in this "
+"series"
+msgstr ""
+"Anstelle der Eingabe: Übernahme der Einstellungen des letzten Turniers in "
+"dieser Reihe"
+
+#: zzbrick_forms/tournaments.inc.php
+msgid "Please only upload files for the entire tournament here."
+msgstr "Bitte laden Sie hier nur Dateien für das gesamte Turnier hoch."
+
+#: zzbrick_forms/tournaments.inc.php
+msgid ""
+"For rounds, there is a possibility to upload a PGN file in the <a href=\"%s"
+"\">round overview</a>."
+msgstr ""
+"Für Runden besteht die Möglichkeit, in der <a href=\"%s\">Rundenübersicht</"
+"a> eine PGN-Datei hochzuladen."
 
 #: zzbrick_make/turnierzahlen.inc.php
 msgid "No ratings found when updating on %s."
