standings: use jobmanager from default module for background jobs, use access=tournaments_job_standings for access check instead of custom check, use return instead of wrap_quit() to stop job manager, always return page text, if action is successful

--- a/tournaments/tournaments-de.po
+++ b/tournaments/tournaments-de.po
@@ -42,6 +42,18 @@ msgstr ""
 "Für Runden besteht die Möglichkeit, in der <a href=\"%s\">Rundenübersicht</"
 "a> eine PGN-Datei hochzuladen."
 
+#: zzbrick_make/standings.inc.php
+msgid ""
+"Attempted to update a round that is higher than the maximum number of rounds."
+msgstr ""
+"Es wurde versucht, eine Runde zu aktualisieren, die höher als die maximale "
+"Anzahl von Runden ist."
+
+#: zzbrick_make/standings.inc.php
+msgid "Standings for tournament %s, round %d have been successfully updated."
+msgstr ""
+"Der Tabellenstand für Turnier %s, Runde %d wurde erfolgreich aktualisiert."
+
 #: zzbrick_make/turnierzahlen.inc.php
 msgid "No ratings found when updating on %s."
 msgstr "Keine Wertungzahlen beim Update am %s gefunden."
