--- a/languages/tournaments-de.po
+++ b/languages/tournaments-de.po
@@ -97,6 +97,11 @@ msgid "Standings for tournament %s, round %d have been successfully updated."
 msgstr ""
 "Der Tabellenstand für Turnier %s, Runde %d wurde erfolgreich aktualisiert."
 
+#: zzbrick_make/swtwriter.inc.php zzbrick_request/swtreader.inc.php
+msgid "SWT file `%s` does not exist. Please upload a file first."
+msgstr ""
+"SWT-Datei `%s` existiert nicht. Bitte laden Sie zuerst eine Datei hoch."
+
 #: zzbrick_make/turnierzahlen.inc.php
 msgid "No ratings found when updating on %s."
 msgstr "Keine Wertungzahlen beim Update am %s gefunden."
